Fix h-scrollbar on low-res

--- a/src/js/app/pages/landing/landing.scss
+++ b/src/js/app/pages/landing/landing.scss
@@ -199,7 +199,7 @@ h4 {
 }
 
 .split-left {
-    width: 400px;
+    max-width: 400px;
     padding-bottom: 20px;
 }
 
